# elycia

./: .gitignore  .pre-commit-config.yaml  README.md  makefile  pyproject.toml
scripts/: add_note.py  add_obfuscation_entry.py  index_notes.py  new_note.py  obfuscate.py  query_brain.py  sync_obfuscation.py
