[project]
name = "elycia"
version = "0.1.0"
description = ""
authors = [
    {name = "Mustafa Shoaib",email = "mustafa.ahmed.shoaib@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.12,<4.0"
dependencies = [
    "llama-index (>=0.12.33,<0.13.0)",
    "chromadb (>=1.0.6,<2.0.0)",
    "openai (>=1.76.0,<2.0.0)",
    "python-dotenv (>=1.1.0,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
